welcome.lessons.welcome.array.array123.Array123.scala.error
array123:7: error: ';' expected but integer literal found.
    else if (nums(i)==2) { test 2 = true }
                                ^